--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "2.1692.0",
+    "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "bucket": "^0.0.1",
