--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.14.0",
+    "puppeteer": "^24.10.1",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.5",
     "stripe": "^14.8.0",
