--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "aws-sdk": "2.1692.0",
-    "axios": "^1.8.1",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "bucket": "^0.0.1",
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "form-data": "^4.0.3",
     "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
